# watch-dangerous-deletions

./: README.md  pyproject.toml
watch_dangerous_deletions/: main.py  settings.py
