[tool.poetry]
name = "watch-dangerous-deletions"
version = "0.1.0"
description = "Watch a Recycle Bin for abnormal deletions that may have been accidental"
authors = ["Caleb Trevatt <in03@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
rich = "^11.0.0"
pyfiglet = "^0.8.post1"
pydub = "^0.25.1"
python-vlc = "^3.0.12118"
pyglet = "^1.5.21"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
watchdel = "watch_dangerous_deletions.main:main"